# test-python-package

./: AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  babel.ini  package.json  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
test_python_package/: __init__.py  cli.py  config.py  ext.py  version.py  views.py
test_python_package/templates/test_python_package/: base.html  index.html
tests/: conftest.py  test_test_python_package.py
