# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 utnapischtim.
#
# test-python-package is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = test-python-package
version = attr: test-python-package/.__version__
description = "This package is to test the ci."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = utnapischtim
author_email = info@tugraz.at
platforms = any
url = https://github.com/utnapischtim/test-python-package
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    click

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    pytest-invenio>=1.4.0
    sphinx>=4.5


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py

[compile_catalog]
directory = test_python_package/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = utnapischtim
msgid_bugs_address = info@kk.org
mapping-file = babel.ini
output-file = test_python_package/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = test_python_package/translations/messages.pot
output-dir = test_python_package/translations/

[update_catalog]
input-file = test_python_package/translations/messages.pot
output-dir = test_python_package/translations/
